argocd-image-updater/namespaced/controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater-controller
spec:
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: argocd-image-updater-controller
          args:
            - --metrics-bind-address=:8080
            - --metrics-secure=false
            - --watch-namespaces="*"
            - run
