argocd-image-updater/namespaced/netpol-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-traffic
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: sys-prom
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      control-plane: argocd-image-updater-controller
  policyTypes:
    - Ingress
